--- a/site.yml
+++ b/site.yml
@@ -15,6 +15,8 @@
         msg: "This is a new commit"
     - debug:
         msg: "this is a commit for the demo"
+    - debug:
+        msg: "adding some more stuff"
   roles:
     - common
 
